//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

R01-01-00-------------------------------------------------------------------
4th October 2012 John Back
     New tag, version "1.1.0", incorporating all changes below.

     Provide proper default constructors for EvtVector4R and 
     EvtPhotonParticle. Modified the validation and test code to also
     compile/link in the case of no external generators being included.

3rd October 2012 John Back
     Corrected the t3 vector form factor values for the Ball-Zwicky '05 
     model (modelId = 6) in EvtbTosllBallFF::getVectorFF(), which
     were set to t3tilde instead.

18th September 2012 John Back
     Moved the external generator engines to a new sub-directory 
     EvtGenExternal. Building the code now creates 2 libraries:
     libEvtGen.so (Base+Models) and libEvtGenExternal.so.
     This allows anyone to ignore using the new external generators
     if required (by not creating/loading the 2nd library).

     Added prefix option to the configure script/Makefile to allow the user 
     to specify an installation directory for the include files, libraries, 
     DECAY.DEC and evt.pdl files (for Genser).

14th September 2012 Michal Kreps
     Fixed the calculation of the angle between decay planes in the function
     EvtKine::EvtDecayAngleChi. Fixed typo in EvtLb2Lll decay model. Only 
     some NP scenarious could be affected, SM one is definitely unaffected.

13th September 2012 John Back
     Added the use of the environment variables EVTGEN_PHOTOS, EVTGEN_PYTHIA 
     and EVTGEN_TAUOLA to specify if the Photos, Pythia and/or Tauola engine
     classes are used or not. These variables are set by the configure script,
     depending if the library paths are specified for these generators.

R01-00-01--------------------------------------------------------------------